fixed bug where app would be responsive on Desktop screens but not on mobile.

--- a/main.css
+++ b/main.css
@@ -25,11 +25,12 @@ main {
 }
 
 .searchForm {
-    width: 33%;
+    width: 250px;
     padding-top: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
 }
 
 input[type="text"] {
@@ -63,6 +64,7 @@ input[type="submit"] {
     border-radius: 3px;
     display: flex;
     flex-direction: column;
+    text-align: center;
 
 }
 
@@ -70,5 +72,5 @@ input[type="submit"] {
     margin: 10px auto 0 auto;
     width: 156px;
     min-width: 100px;
-    height: 150px;
+    height: 156px;
 }
